<resources>
    <string name="app_name">YuyaTa</string>
    <string name="welcome_title"><b>BIENVENIDO</b></string>
    <string name="welcome_desc">Por favor inicia sesión o regístrate</string>
    <string name="welcome_btn_login">Iniciar sesión</string>
    <string name="welcome_btn_register">Regístrarse</string>
    <string name="register_title"><b>Ingresa tus datos</b></string>
    <string name="register_input_names">Nombres</string>
    <string name="register_input_lastnames">Apellidos</string>
    <string name="register_input_birthdate">Fecha de nacimiento</string>
    <string name="register_input_dni">Número de DNI</string>
    <string name="register_btn_register">Registrarse</string>
    <string name="login_title"><b>Hola!</b></string>
    <string name="login_desc">Por favor ingresa tu DNI para continuar</string>
    <string name="login_input_dni">Ingresa aquí tu DNI</string>
    <string name="login_btn_login">INICIAR SESIÓN</string>
    <string name="Doses">Dosis</string>
    <string name="Map">Mapa</string>
    <string name="Statitic">Estadística</string>
    <string name="CompleteFields">Completar campos</string>
    <string name="ExistingUser">Usuario ya creado</string>
    <string name="ThisUserDoesNotExit">El usuario no existe, por favor registrarse!</string>

    <string name="hello_blank_fragment">Hola fragment vacío</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>