<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_bg">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/doctor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wv_desc" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_background"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="70dp" />

        <TextView
            android:id="@+id/wv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:textColor="@color/blue_primary"
            />

        <TextView
            android:id="@+id/wv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_desc"
            app:layout_constraintTop_toBottomOf="@id/wv_title"
            app:layout_constraintLeft_toLeftOf="@id/wv_title"
            android:textColor="@color/black_text"
            android:layout_marginTop="1dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wv_btn_login"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/welcome_btn"
            android:backgroundTint="@color/white"
            android:text="@string/welcome_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textColor="@color/blue_primary"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wv_btn_register"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/welcome_btn"
            android:backgroundTint="@color/white"
            android:text="@string/welcome_btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wv_btn_login"
            android:textSize="24sp"
            android:textColor="@color/blue_primary"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>